# logistrans

./: Cargo.toml  README.md  env.example
src/: auth.rs  config.rs  database.rs  main.rs  models.rs  websocket.rs
src/handlers/: auth.rs  cargo.rs  mod.rs  routes.rs  tracking.rs  users.rs  vehicles.rs
static/: app.js  index.html  styles.css
